--- a/backend/package.json
+++ b/backend/package.json
@@ -8,15 +8,21 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "prisma": "^4.13.0",
+    "web-push": "^3.6.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
+    "@types/web-push": "^3.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   }
