--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "morgan": "^1.10.0",
     "prisma": "^4.13.0",
+    "sharp": "^0.32.1",
     "web-push": "^3.6.1"
   },
   "devDependencies": {
