--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "framer-motion": "^10.12.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0"
